# sticky

./: pyproject.toml
api/: models.py  urls.py  views.py
api/migrations/: 0001_initial.py
core/: settings.py  urls.py
templates/: copy.html  info.html  paste.html
